--- a/assets/scss/components/_flc-broken-links.scss
+++ b/assets/scss/components/_flc-broken-links.scss
@@ -202,7 +202,7 @@
 	> header {
 		.btl-subheader-form {
 			.btl-subheader-form-input {
-				input {
+				> input[type='text'] {
 					width: 300px;
 					height: 45px;
 					background-color: #f2f5fc;
